--- a/DReporting.Web/Areas/Reporting/Views/Web.config
+++ b/DReporting.Web/Areas/Reporting/Views/Web.config
@@ -17,6 +17,10 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.Optimization" />
+
+        <add namespace="System.Web"/>
+        <add namespace="System.Web.UI"/>
+        <add namespace="System.Web.UI.WebControls"/>
         
         <add namespace="DReporting" />
         <add namespace="DReporting.Models" />
