--- a/DReporting.Web/Views/Web.config
+++ b/DReporting.Web/Views/Web.config
@@ -15,9 +15,22 @@
         <add namespace="System.Web.Mvc" />
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
-        <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
+        <add namespace="System.Web.Optimization" />
+
+        <add namespace="System.Web"/>
+        <add namespace="System.Web.UI"/>
+        <add namespace="System.Web.UI.WebControls"/>
+
         <add namespace="DReporting" />
+        <add namespace="DReporting.Models" />
+        <add namespace="DReporting.Web" />
+        <add namespace="DReporting.Web.Mvc.ViewModels" />
+
+        <add namespace="DevExpress.Utils" />
+        <add namespace="DevExpress.Web" />
+        <add namespace="DevExpress.Web.Mvc" />
+        <add namespace="DevExpress.Web.Mvc.UI" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
