--- a/DReporting.Web/DReporting.Web.csproj
+++ b/DReporting.Web/DReporting.Web.csproj
@@ -217,14 +217,31 @@
     </Content>
     <Content Include="Areas\Reporting\Content\bootstrap.css" />
     <Content Include="Areas\Reporting\Content\dreporting.css" />
+    <Content Include="Areas\Reporting\Content\images\ui-icons_222222_256x240.png" />
+    <Content Include="Areas\Reporting\Content\images\ui-icons_444444_256x240.png" />
+    <Content Include="Areas\Reporting\Content\images\ui-icons_555555_256x240.png" />
+    <Content Include="Areas\Reporting\Content\images\ui-icons_777620_256x240.png" />
+    <Content Include="Areas\Reporting\Content\images\ui-icons_777777_256x240.png" />
+    <Content Include="Areas\Reporting\Content\images\ui-icons_cc0000_256x240.png" />
+    <Content Include="Areas\Reporting\Content\images\ui-icons_ffffff_256x240.png" />
     <Content Include="Areas\Reporting\Content\jquery-ui.min.css" />
     <Content Include="Areas\Reporting\Scripts\ace.js" />
+    <Content Include="Areas\Reporting\Scripts\cldr.event.min.js" />
+    <Content Include="Areas\Reporting\Scripts\cldr.min.js" />
+    <Content Include="Areas\Reporting\Scripts\cldr.supplemental.min.js" />
+    <Content Include="Areas\Reporting\Scripts\cldr.unresolved.min.js" />
     <Content Include="Areas\Reporting\Scripts\dreporting.js" />
-    <Content Include="Areas\Reporting\Scripts\ext-language_tools.js" />
+    <Content Include="Areas\Reporting\Scripts\ace.ext-language_tools.js" />
+    <Content Include="Areas\Reporting\Scripts\globalize.currency.js" />
+    <Content Include="Areas\Reporting\Scripts\globalize.date.js" />
     <Content Include="Areas\Reporting\Scripts\globalize.js" />
-    <Content Include="Areas\Reporting\Scripts\jquery-1.11.1.min.js" />
-    <Content Include="Areas\Reporting\Scripts\jquery-ui.min.js" />
-    <Content Include="Areas\Reporting\Scripts\knockout-3.3.0.js" />
+    <Content Include="Areas\Reporting\Scripts\globalize.message.js" />
+    <Content Include="Areas\Reporting\Scripts\globalize.number.js" />
+    <Content Include="Areas\Reporting\Scripts\integration-note.png" />
+    <Content Include="Areas\Reporting\Scripts\integration-note.txt" />
+    <Content Include="Areas\Reporting\Scripts\jquery-3.2.1.min.js" />
+    <Content Include="Areas\Reporting\Scripts\jquery-ui-1.12.1.min.js" />
+    <Content Include="Areas\Reporting\Scripts\knockout-3.4.2.js" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\gridview\Down.gif" />
