--- a/DReporting.Web/DReporting.Web.csproj
+++ b/DReporting.Web/DReporting.Web.csproj
@@ -206,6 +206,7 @@
     </Compile>
     <Compile Include="ReportDatas\DataSetProvider.cs" />
     <Compile Include="ReportDatas\ObjectProvider.cs" />
+    <Compile Include="ReportDatas\ObjectProviderPlus.cs" />
     <Compile Include="ReportDatas\SampleProvider.cs" />
     <Compile Include="ReportDatas\TypeListProvider.cs" />
     <Compile Include="Startup.cs" />
