--- a/DReporting.Web/DReporting.Web.csproj
+++ b/DReporting.Web/DReporting.Web.csproj
@@ -283,7 +283,7 @@
     <Compile Include="ReportDatas\DataSetProvider.cs" />
     <Compile Include="ReportDatas\ObjectProvider.cs" />
     <Compile Include="ReportDatas\ObjectProviderPlus.cs" />
-    <Compile Include="ReportDatas\SampleProvider.cs" />
+    <Compile Include="ReportDatas\SqlQueryProvider.cs" />
     <Compile Include="ReportDatas\TypeListProvider.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
