--- a/DReporting.Web/DReporting.Web.csproj
+++ b/DReporting.Web/DReporting.Web.csproj
@@ -275,8 +275,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReportDatas\EFDataProvider.cs" />
-    <Compile Include="ReportDatas\ExcelDataProvider.cs" />
+    <Compile Include="ReportDatas\ApiDataProvider.cs" />
     <Compile Include="ReportDatas\ObjectDataProvider.cs" />
     <Compile Include="ReportDatas\SqlDataProvider.cs" />
     <Compile Include="Startup.cs" />
