--- a/DReporting.Web/Web.config
+++ b/DReporting.Web/Web.config
@@ -25,7 +25,13 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <location path="Reporting">
+    <system.web>
+      <globalization requestEncoding="utf-8" responseEncoding="utf-8" fileEncoding="utf-8" culture="en-US"/>
+    </system.web>
+  </location>
   <system.web>
+    <!--<globalization requestEncoding="gb2312" responseEncoding="gb2312" />-->
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
